--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Hacker-Blog
+title: Terminal-Theme
 description: "A Jekyll Blog Theme For Hackers"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  name: "ProbablyBenji"
+  email: "ProbablyBenji@protonmail.com"
+  url: "http://probablybenji.tk"
 
 baseurl: /
 
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2018"
+owner : "ProbablyBenji"
+year : "2020"
