Second "Ravi" post... this should be deleted...

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Terminal-Theme
-description: "A Jekyll Blog Theme For Hackers"
+description: "Bloggy blog for the world"
 author:
   name: "ProbablyBenji"
   email: "ProbablyBenji@protonmail.com"
